design of right and left components are improved

--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
         <img src="images/logo.svg" alt="">
       </div>
       <div class="secondary-icons">
-        <img src="images/icon-document.svg" alt="">
-        <img src="images/icon-folder.svg" alt="">
-        <img src="images/icon-upload.svg" alt="">
+        <div class="icon"><img src="images/icon-document.svg" alt=""></div>
+        <div class="icon"><img src="images/icon-folder.svg" alt=""></div>
+        <div class="icon"><img src="images/icon-upload.svg" alt=""></div>
       </div>
     </div>
     <div class="right">
       <p>You’ve used <span>815 GB </span>of your storage</p>
       <div class="progress-bar">
-        <div class="progress" id="my-progress"></div>
+        <div class="progress">
+          <div class="dot"></div>
+        </div>
       </div>
       <div class="texts">
         <span>0 GB</span>
