--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <span>0 GB</span>
         <span>1000 GB</span>
       </div>
+      <div class="box">
+        <p><span>185</span> GB LEFT</p>
+      </div>
     </div>
   </main>
   <div class="attribution">
