--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">xozlemates</a>.
+    Coded by <a href="https://github.com/ozlemxates">xozlemates</a>.
   </div>
 </body>
 </html>
